base/_forms.scss
// BASE FORM STYLES
////////////////////////////////////////////////////////////////
fieldset {
  background-color: transparent;
  border: 0;
  margin: 0;
  padding: 0;
}

legend {
  font-weight: 600;
  margin-bottom: $small-spacing / 2;
  padding: 0;
}

label {
  display: block;
  font-weight: 600;
  margin-bottom: $small-spacing / 2;
}

input,
textarea,
select {
  display: block;
  width: 100%;
  margin-bottom: $small-spacing;
  padding: $small-spacing;
  font-family: $base-font-family;
  font-size: $base-font-size;
  background-color: $base-background-color;
  border: $base-border;
  border-radius: $base-border-radius;
  box-sizing: border-box;
  transition: border-color .3s;

  &:hover {
    border-color: shade($base-border-color, 20%);
  }

  &:focus {
    border-color: $action-color;
    outline: none;
  }

  &:disabled {
    background-color: shade($base-background-color, 5%);
    cursor: not-allowed;

    &:hover {
      border: $base-border;
    }
  }
}

select {
  margin-bottom: $base-spacing;
  max-width: 100%;
  width: auto;
}

textarea {
  resize: vertical;
}

[type="search"] {
  appearance: none;
}

[type="checkbox"],
[type="radio"] {
  display: inline;
  margin-right: $small-spacing / 2;
}

